--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://www.miniso.am/media/favicon/default/fav.png">
 </head>
 <body>
-<p1>Ապրանքներ miniso-ից</p1>
-<ol>
-  <li>Գրիչ</li>
-  <li>Տետր</li>
-  <li>Պայուսակ</li>
-</ol>
+<h1>Համեցեք դեպի mini miniso։ Ի՞նչ կցանկանաք գնել</h1>
+<a href="">
+    <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:15%; height:100px; font-family:Arial, sans-serif; font-size:20px">Կոսմետիկա</button>
+</a>
+<a href="">
+    <button style="height:100px">Գրենական պիտույքներ</button>
+</a>
 </body>
 </html>
