--- a/cosmetics.html
+++ b/cosmetics.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://www.miniso.am/media/favicon/default/fav.png">
 </head>
 <body>
-<a href="https://lively-beach-01bd8750f.5.azurestaticapps.net/">
+<a href="/">
   <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; vertical-align:top; font-family:Arial, sans-serif">Ետ</button>
 </a>
 <br>
