--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h1>Համեցեք դեպի mini miniso։ Ի՞նչ կցանկանաք գնել</h1>
-<a href="">
+<a href="/cosmetics.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Կոսմետիկա</button>
 </a>
 <a href="">
