changed the font

--- a/cosmetics.html
+++ b/cosmetics.html
@@ -11,6 +11,8 @@
   <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; vertical-align:top; font-family:Arial, sans-serif">Ետ</button>
 </a>
 <br>
-<img src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2022042135910284-1.jpg" style="height:200px">
+<img src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2022042135910284-1.jpg" style="height:200px; width:200px; vertical-align:top;">
+<br>
+<img src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6954578702931.jpg" style="height:200px; vertical-align:top; transform:translate(205px, -200px)">
 </body>
 </html>
