--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="https://www.miniso.am/media/favicon/default/fav.png">
 </head>
 <body>
-<h1>Համեցեք դեպի mini miniso։ Ի՞նչ կցանկանաք գնել</h1>
+<h1 style="font-family:Arial, sans-serif; color:#ff0000">Համեցեք դեպի mini miniso։ Ի՞նչ կցանկանաք գնել</h1>
 <a href="/cosmetics.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Կոսմետիկա</button>
 </a>
@@ -23,7 +23,7 @@
 <a href="">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-aligh:top">Այլ ապրանքներ</button>
 </a>
-<h1>Այլ տեղեկություններ մեր ապրանքների մասին</h1>
+<h1 style="font-family:Arial, sans-serif; color:#ff0000">Այլ տեղեկություններ մեր ապրանքների մասին</h1>
 <a href="">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:49%; height:100px; font-family:Arial, sans-serif; font-size:30px; vertical-align:top">Բառակազմական վերլուծություն</button>
 </a>
