--- a/cosmetics.html
+++ b/cosmetics.html
@@ -5,14 +5,46 @@
     <title>Cosmetics</title>
   <link rel="icon" type="image/x-icon" href="https://www.miniso.am/media/favicon/default/fav.png">
     <link rel="shortcut icon" type="image/x-icon" href="https://www.miniso.am/media/favicon/default/fav.png">
+    <style>
+        .container {
+            display:grid;
+            grid-template-columns: repeat(5, minmax(0, 1fr));
+        }
+        .image {
+            width: 150px;
+            border: solid black 1px;
+        }
+        .text {
+            font-family:Arial, sans-serif; color:#ff0000;
+        }
+    </style>
 </head>
 <body>
 <a href="/">
   <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; vertical-align:top; font-family:Arial, sans-serif">Ետ</button>
 </a>
 <br>
-<img src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2022042135910284-1.jpg" style="height:200px; width:200px; vertical-align:top;">
-<br>
-<img src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6954578702931.jpg" style="height:200px; vertical-align:top; transform:translate(205px, -200px)">
+<div class="container">
+    <div>
+        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2022042135910284-1.jpg">
+        <div class="text">Սանր-2990 դրամ</div>
+    </div>
+    <div>
+        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6954578702931.jpg">
+        <div class="text">Շրթներկ-2490 դրամ</div>
+    </div>
+    <div>
+        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/270122d65d724a5d84bfe062ac9e6b83/6/9/6941501560515.jpg">
+        <div class="text">Մազակալ-490 դրամ</div>
+    </div>
+    <div>
+        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2012456310105.jpg">
+        <div class="text">Օծանելիք-5490 դրամ</div>
+    </div>
+    <div>
+        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6940079077890.jpg">
+        <div class="text">Դեմքի դիմակ-1990 դրամ</div>
+    </div>
+</div>
 </body>
 </html>
