made the cosmetics 2

--- a/cosmetics.html
+++ b/cosmetics.html
@@ -17,6 +17,9 @@
         .text {
             font-family:Arial, sans-serif; color:#ff0000;
         }
+        .container-item {
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -25,23 +28,23 @@
 </a>
 <br>
 <div class="container">
-    <div>
+    <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2022042135910284-1.jpg">
         <div class="text">Սանր-2990 դրամ</div>
     </div>
-    <div>
+    <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6954578702931.jpg">
         <div class="text">Շրթներկ-2490 դրամ</div>
     </div>
-    <div>
+    <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/270122d65d724a5d84bfe062ac9e6b83/6/9/6941501560515.jpg">
         <div class="text">Մազակալ-490 դրամ</div>
     </div>
-    <div>
+    <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/2/0/2012456310105.jpg">
         <div class="text">Օծանելիք-5490 դրամ</div>
     </div>
-    <div>
+    <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6940079077890.jpg">
         <div class="text">Դեմքի դիմակ-1990 դրամ</div>
     </div>
