made the stationary

--- a/cosmetics.html
+++ b/cosmetics.html
@@ -11,11 +11,12 @@
             grid-template-columns: repeat(5, minmax(0, 1fr));
         }
         .image {
-            width: 150px;
+            max-width: 200px;
             border: solid black 1px;
+            height:200px;
         }
         .text {
-            font-family:Arial, sans-serif; color:#ff0000;
+            font-family:Arial, sans-serif; color:#ff0000; font-size:20px;
         }
         .container-item {
             cursor: pointer;
