--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a href="/cosmetics.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Կոսմետիկա</button>
 </a>
-<a href="">
+<a href="/pen.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Գրենական պիտույքներ</button>
 </a>
 <a href="">
