--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="/pen.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Գրենական պիտույքներ</button>
 </a>
-<a href="">
+<a href="/toys.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Խաղալիքներ</button>
 </a>
 <a href="">
