made the others

--- a/electronics.html
+++ b/electronics.html
@@ -8,7 +8,7 @@
     <style>
         .container {
             display:grid;
-            grid-template-columns: repeat(3, minmax(0, 1fr));
+            grid-template-columns: repeat(4, minmax(0, 1fr));
         }
         .image {
             max-width: 300px;
@@ -40,6 +40,10 @@
     <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6941447588611.jpg">
         <div class="text">Անլար բարձրախոս-9490 դրամ</div>
+    </div>
+       <div class="container-item">
+        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6931798840513.jpg">
+        <div class="text">Լուսամփոփ-4990 դրամ</div>
     </div>
 </div>
 </body>
