--- a/pen.html
+++ b/pen.html
@@ -34,7 +34,7 @@
         <div class="text">Նոթատետր-3490 դրամ</div>
     </div>
     <div class="container-item">
-        <img class="image" src="https://soneesports.com/cdn/shop/files/2014561510104_1.jpg?v=1706496526">
+        <img class="image" src="https://chinarcart.com/cdn/shop/files/6931798878486-1_1024x1024.jpg?v=1700860157">
         <div class="text">Ռետին-2990 դրամ</div>
     </div>
     <div class="container-item">
@@ -52,10 +52,6 @@
     <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/i/m/image_1024.jpg">
         <div class="text">Ջրի շիշ-7990 դրամ</div>
-    </div>
-    <div class="container-item">
-        <img class="image" src="https://www.miniso.am/media/catalog/product/cache/2ff9514beff202b32500cc36f8789a25/6/9/6931798840513.jpg">
-        <div class="text">Լուսամփոփ-4990 դրամ</div>
     </div>
     <div class="container-item">
         <img class="image" src="https://www.miniso.am/media/catalog/product/cache/270122d65d724a5d84bfe062ac9e6b83/4/5/4509791368925.jpg">
