--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <a href="/electronics.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-align:top">Էլեկտրոնիկա</button>
 </a>
-<a href="">
+<a href="/others.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-aligh:top">Այլ ապրանքներ</button>
 </a>
 <h1 style="font-family:Arial, sans-serif; color:#ff0000">Այլ տեղեկություններ մեր ապրանքների մասին</h1>
