made the stories

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:19%; height:100px; font-family:Arial, sans-serif; font-size:20px; vertical-aligh:top">Այլ ապրանքներ</button>
 </a>
 <h1 style="font-family:Arial, sans-serif; color:#ff0000">Այլ տեղեկություններ մեր ապրանքների մասին</h1>
-<a href="">
+<a href="/bar.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:49%; height:100px; font-family:Arial, sans-serif; font-size:30px; vertical-align:top">Բառակազմական վերլուծություն</button>
 </a>
-<a href="">
+<a href="/appearing story.html">
     <button style="background-color:#ffffff; color:#ff0000; border-radius:5px; width:49%; height:100px; font-family:Arial, sans-serif; font-size:30px; vertical-align:top">Առաջացման պատմություն</button>
 </a>
 <br>
